# memvault

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/demo/wiki/: architecture.md  index.md
examples/demo/wiki/concepts/: okf.md
examples/demo/wiki/metrics/: error-rate.md  request-latency.md
examples/demo/wiki/runbooks/: incident-response.md
examples/demo/wiki/services/: api-gateway.md  auth-service.md  billing-service.md
src/memvault/: __init__.py  __main__.py  cli.py  config.py  export_okf.py  install_harness.py  mcp_server.py  okfio.py  query_wiki.py  wiki_embed.py  wiki_viz.py
src/memvault/harness/hooks/: wiki_inject.py
src/okf_wiki/: __init__.py  __main__.py  cli.py  config.py  install_harness.py  okf_wiki_mcp.py  sessions.py  wiki_semantic_index.py  wiki_semantic_query.py
src/okf_wiki/_okf_viewer/: NOTICE.md
src/okf_wiki/harness/hooks/: wiki_inject.py
tests/: test_smoke.py
